# Homework-Banking

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md
banking/: CMakeLists.txt
banking/tests/: test_account.cpp  test_transaction.cpp
