project(banking)

cmake_minimum_required(VERSION 3.4)

set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)

option(BUILD_TESTS "Build tests" OFF)

include(${CMAKE_CURRENT_SOURCE_DIR}/banking/CMakeLists.txt)

if (BUILD_TESTS)
    enable_testing()
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third-party/gtest)
    if (TARGET libbanking)
        # test Account module
        add_executable(check_account ${CMAKE_CURRENT_SOURCE_DIR}/banking/tests/test_account.cpp)
        target_link_libraries(check_account libbanking gtest_main gmock_main)
        add_test(NAME account COMMAND check_account)

        # test Transaction module
        add_executable(check_transaction ${CMAKE_CURRENT_SOURCE_DIR}/banking/tests/test_transaction.cpp)
        target_link_libraries(check_transaction libbanking gtest_main gmock_main)
        add_test(NAME transaction COMMAND check_transaction)
    endif(TARGET libbanking)
endif(BUILD_TESTS)
